Add support for image URL loading with httpx
- Add httpx dependency for HTTP image downloads
- Update handler to accept both image URLs and base64 encoded images
- Add automatic detection and handling of URL vs base64 input
- Maintain backward compatibility with existing base64 format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "diffusers>=0.35.2",
+    "httpx",
     "loguru>=0.7.3",
     "peft>=0.18.0",
     "runpod>=1.7.13",
